--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 # build output
-# dist/
+dist/
 
 # generated types
 .astro/
@@ -20,9 +20,5 @@ pnpm-debug.log*
 # macOS-specific files
 .DS_Store
 
-# jetbrains setting folder
-.idea/
-
 .wrangler/
 .vscode/
-package-lock.json
