--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@fontsource/inter": "^5.1.1",
-    "@fontsource/roboto-mono": "^5.1.1",
-    "@fontsource/source-sans-pro": "^5.1.0",
-    "astro": "^5.1.2"
-  },
-  "devDependencies": {}
+    "@fontsource/inter": "^5.2.5",
+    "@fontsource/roboto-mono": "^5.2.5",
+    "@fontsource/source-sans-pro": "^5.2.5",
+    "@tailwindcss/vite": "^4.1.6",
+    "astro": "^5.7.12",
+    "tailwindcss": "^4.1.6"
+  }
 }
