--- a/package.json
+++ b/package.json
@@ -6,14 +6,19 @@
     "dev": "astro dev",
     "build": "astro build",
     "preview": "astro build && astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "postinstall": "flowbite-react patch"
   },
   "dependencies": {
+    "@astrojs/react": "^4.3.0",
     "@fontsource/inter": "^5.2.5",
     "@fontsource/roboto-mono": "^5.2.5",
     "@fontsource/source-sans-pro": "^5.2.5",
     "@tailwindcss/vite": "^4.1.6",
     "astro": "^5.7.12",
+    "flowbite-react": "^0.11.7",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "tailwindcss": "^4.1.6"
   }
 }
